# verifying-email-binder

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
migrations/: 1_bind_code.sql
src/: main.rs
src/contracts/: guardian.rs
src/rpc/: error.rs  request.rs  response.rs
src/service/: code.rs  email.rs  error.rs  mod.rs  verify.rs
